--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <hr />
       <div class="letters-guess"></div>
     </div>
+    <audio id="success" src="./sounds/win.wav"></audio>
+    <audio id="add" src="./sounds/add-letter.wav"></audio>
+    <audio id="fail" src="./sounds/wrong.wav"></audio>
+
     <script src="script.js"></script>
   </body>
 </html>
